plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.2.4' apply false
    id 'io.spring.dependency-management' version '1.1.4'
    id 'io.freefair.lombok' version '8.6' apply false
}

subprojects {

    apply plugin: 'java-library'
    apply plugin: 'io.freefair.lombok'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'de.bennyboer.kicherkrabbe'
    version = '0.0.1'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'io.projectreactor:reactor-core:3.6.5'
        implementation 'commons-validator:commons-validator:1.8.0'

        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-webflux'
        implementation 'org.springframework.boot:spring-boot-starter-amqp'

        testImplementation 'io.projectreactor:reactor-test:3.6.5'
        testImplementation("org.assertj:assertj-core:3.25.1")
    }

    tasks.named('test') {
        useJUnitPlatform()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

}
